istio-ingress-gateway/istio-virtual-service.yml
# Define the Istio VirtualService resource
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-virtual-service # Name of the VirtualService resource
# Specify the configuration for the VirtualService
spec:
  hosts:
  - "*" # Match requests for any host
  gateways:
  - istio-gateway # Associate the VirtualService with the istio-gateway
  http:
  - match:
    - uri:
        exact: /order  # Match requests with the exact URI "/order"
    route:
    - destination:
        host: order-service
        port:
          number: 3000
  - match:
    - uri:
        exact: /shipping  # Match requests with the exact URI "/shipping"
    route:
    - destination:
        host: shipping-service
        port:
          number: 3001
